[gd_scene load_steps=3 format=3 uid="uid://hxxtj4ffcpn5"]

[ext_resource type="Script" path="res://teste.gd" id="1_jd2j7"]

[sub_resource type="CanvasTexture" id="CanvasTexture_rfkaj"]

[node name="Node2D" type="Node2D"]
position = Vector2(480, 160)
scale = Vector2(-3.519, 12)
script = ExtResource("1_jd2j7")

[node name="dot1" type="Sprite2D" parent="."]
position = Vector2(0, -5.33333)
scale = Vector2(2.00796, 0.563011)
texture = SubResource("CanvasTexture_rfkaj")
region_enabled = true
region_rect = Rect2(0, 0, 9.022, 9.32196)

[node name="dot2" type="Sprite2D" parent="."]
position = Vector2(-90.9349, 16)
scale = Vector2(1.95675, 0.580092)
texture = SubResource("CanvasTexture_rfkaj")
region_enabled = true
region_rect = Rect2(0, 0, 9.022, 9.32196)

[node name="dot3" type="Sprite2D" parent="."]
position = Vector2(-1.78814e-07, 16)
scale = Vector2(1.92081, 0.568342)
texture = SubResource("CanvasTexture_rfkaj")
region_enabled = true
region_rect = Rect2(0, 0, 9.022, 9.32196)

[node name="dot4" type="Sprite2D" parent="."]
position = Vector2(-90.9349, -5.33333)
scale = Vector2(1.92876, 0.579299)
texture = SubResource("CanvasTexture_rfkaj")
region_enabled = true
region_rect = Rect2(0, 0, 9.022, 9.32196)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.619
autostart = true

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(120, 20)
offset_left = 2.27337
offset_top = 32.6667
offset_right = 142.273
offset_bottom = 52.6667
scale = Vector2(-0.760045, 0.243424)
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.1

[node name="Button" type="Button" parent="."]
offset_left = -118.215
offset_top = 25.3333
offset_right = -110.215
offset_bottom = 33.3333

[node name="Button2" type="Button" parent="."]
offset_left = 9.09349
offset_top = 27.3333
offset_right = 17.0935
offset_bottom = 35.3333
scale = Vector2(5.71119, 0.533422)

[node name="VSlider" type="VSlider" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 130)
offset_left = 104.575
offset_top = 4.66667
offset_right = 120.575
offset_bottom = 134.667
scale = Vector2(1.11333, 0.265962)
max_value = 200.0

[node name="VSlider2" type="VSlider" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 130)
offset_left = -188.69
offset_top = 5.33333
offset_right = -172.69
offset_bottom = 135.333
scale = Vector2(1.11333, 0.265962)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="value_changed" from="VSlider" to="." method="_on_v_slider_value_changed"]
